# pytime-v2

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build-and-release.yaml
pytime_v2/: main.py
