[tool.poetry]
name = "pytime-v2"
version = "0.1.0"
description = ""
authors = ["Julen Dixneuf <julend@padok.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^3.0.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://www.python.org/dev/peps/pep-0518/
[tool.isort]
profile = "black"
